<resources>
    <string name="app_name">Menu Navigation Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather</string>
    <string name="nav_header_subtitle">aelov62@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">site</string>
    <string name="action_favorite">favorite</string>
    <string name="menu_send">Send</string>
    <string name="menu_home">Home</string>
    <string name="menu_location">Location</string>
    <string name="menu_geolocation">Geolocation</string>
    <string name="menu_history">History</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_developer">About the developer</string>

</resources>