<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_geolocation"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_geolocation" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_setting" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_developer"
                android:icon="@drawable/ic_baseline_sentiment_satisfied_alt_24"
                android:title="@string/menu_developer" />

        </menu>
    </item>

</menu>